@@ -1,8 +1,10 @@
 package com.keroleap.immerreader.Controller;
 
 import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -12,7 +14,6 @@ import javax.imageio.ImageIO;
 
 import java.awt.image.BufferedImage;
 
-import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
@@ -136,7 +137,7 @@ private AristonRest getAristonRestData(BufferedImage bufferedImage) {
 
 private BufferedImage getBufferedImage(String imageUrl) throws IOException {
     try {
-        URL url = new URL(imageUrl);
+        URL url = URI.create(imageUrl).toURL();
         try (InputStream stream = url.openStream();
              ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
             byte[] chunk = new byte[4096];
