@@ -2,8 +2,10 @@ package com.keroleap.immerreader.Scheduler;
 
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -15,7 +17,6 @@ import java.util.concurrent.TimeoutException;
 
 import javax.imageio.ImageIO;
 
-import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
@@ -162,7 +163,7 @@ public int getNumber(boolean digit1_1, boolean digit1_2, boolean digit1_3, boole
 
 private BufferedImage getBufferedImage(String imageUrl) throws IOException {
     try {
-        URL url = new URL(imageUrl);
+        URL url = URI.create(imageUrl).toURL();
         try (InputStream stream = url.openStream();
              ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
             byte[] chunk = new byte[4096];
